sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: type int
  var i : int = 0
          ^