sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i : int = 0
  while (i != getNombreValeurs()){
    if (!plusPetit(i,i+1)){
      echange(i,i+1)
    }
    i = i + 1
  }
}